# python-poetry-template

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/: main.py
src/config/: __init__.py  env.py  logger.py
